Fix unable to add decimal in products order field for admin. Lowered z-index to hide  input group form control from showing over menu pop up.

--- a/imports/ui/stylesheets/base/_forms.scss
+++ b/imports/ui/stylesheets/base/_forms.scss
@@ -14,3 +14,7 @@
   height: 14em;
   padding-left: 2em;
 }
+
+.input-group .form-control{
+  z-index:1;
+}
